--- a/src/settings.html
+++ b/src/settings.html
@@ -22,7 +22,13 @@
     <div><button id="polli-live-new-session-btn">New Session</button></div>
     <img
       class="polli-live-qr-code"
-      style="border-radius: 4%; background-color: white; padding: 1em"
+      style="
+        border-radius: 4%;
+        background-color: white;
+        padding: 1em;
+        image-rendering: pixelated;
+        width: min(70vw, 70vh);
+      "
     />
     <div><button id="polli-live-close-settings-btn">Close</button></div>
   </div>
