improve qr codes

--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
       <option>No</option>
       <option>Yes</option>
     </div>
+    <img class="polli-live-qr-code" style="image-rendering: pixelated" />
     <script>
       polli_live.initialize({});
     </script>
