rename poll types

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div
-      class="poll-slide"
+      class="polli-live-continuum"
       id="do-you-like-it-poll"
       style="width: 100%; height: 100%; background-color: aliceblue"
     >
