--- a/src/poll_types/continuum.html
+++ b/src/poll_types/continuum.html
@@ -56,7 +56,8 @@
       }
 
       #options > div {
-        padding: 0.5em;
+        padding-left: 0.5em;
+        padding-right: 0.5em;
       }
 
       #slider-with-options {
